# markdown-to-epub

./: CLAUDE.md  README.md  pyproject.toml
.claude/skills/: make-ebook.md  obsidian-to-epub.md
md2epub/: __init__.py  assets.py  cli.py  converter.py  epub_builder.py  parser.py  pdf_builder.py
md2epub/obsidian/: __init__.py  callouts.py  embeds.py  frontmatter.py  wikilinks.py
scripts/: build_ebook.py
tests/: final_test.epub  sample_note.md
